--- a/Console Application/CMakeLists.txt
+++ b/Console Application/CMakeLists.txt
@@ -4,4 +4,5 @@ project(Console_Application)
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(Console_Application main.cpp
-        BankAccount.h)
+        BankAccount.h
+        BankAccount.cpp)
